--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
  Description:  Stylish pompette theme
  Author:       Mathilde, Katrine, Lykke
  Template:     astra
- Version:      1.3.4
+ Version:      1.3.7
 */
 
 
@@ -27,3 +27,18 @@ footer{
  div.main-header-bar.ast-header-breadcrumb{
      margin-left:100px;
  }
+
+ .wp-block-column h4, .wp-block-column p{
+color: white;
+ }
+
+ @media screen and (min-width: 545px) {
+  img .wp-image-131{
+      display:none;
+  }
+
+
+
+
+
+  }
