--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
  Description:  Stylish pompette theme
  Author:       Mathilde, Katrine, Lykke
  Template:     astra
- Version:      2.3.9
+ Version:      2.4.3
 */
 
 /*REMEMBER STYLE MOBILE FIRST!*/
@@ -17,7 +17,10 @@
     margin: 10px auto;
     margin-bottom:50px;
 }
-
+/* fjerner wordpress header title*/
+.page .entry-header h1.entry-title {
+    display:none;
+}
 /*fikser forside alignment*/
 .site-content .ast-container {
     display: block;
@@ -28,17 +31,12 @@
     margin:0 auto;
 }
 
-/*fjerner border kant*/
+/*fjerner border kant på forside*/
 .ast-right-sidebar #primary {
     border-right: none;
 }
 
 /*font and text styling*/
-
-.page .entry-header h1.entry-title {
-    display:none;
-}
-
 label{
     color:#0007ff;
     font-weight: 600;
@@ -62,9 +60,6 @@ footer{
          }
 /*----------------------------------------------------------------------------------------------------*/
 
-
-
- 
  /*------forms for sommelier help----*/
  /*letter emoji*/
  #letter{
@@ -121,14 +116,12 @@ footer{
  
 }
 
-
 #form-section p{
     font-style: italic;
     color:#ff0000;
     margin-top: 10px;
     text-align:center;
 }
-
 
 #email, #mood, #looking , #budget{
     max-width:100%;
@@ -173,7 +166,7 @@ align-content: flex-end;
     padding:20px;
 }
 .allIllustration{
-    background-image: url(https://www.xn--mflingo-q1a.dk/kea/pompettesite/wp-content/uploads/2021/12/alloutline.png);
+    background-image: url(https://www.xn--mflingo-q1a.dk/kea/pompettesite/wp-content/uploads/2021/12/alloutlined.png);
     width: 13vw;
     height:31vh;
     background-size:contain;
@@ -301,14 +294,22 @@ align-content: flex-end;
 #overskrift{
     text-transform: uppercase;
 }
+/*loop view vin oversigt - responsiv grid */
 #loopview{
     display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-  row-gap: 60px;
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  row-gap: 40px;
   column-gap: 60px;
-  margin: auto;
+  margin: auto 15px;
   margin-bottom: 2rem;
 }
+
+.theWine img {
+width: 100vw;
+height: 40vh;
+object-fit: cover;
+object-position: 50% 100%;
+  }
 
 /*MEDIAQUERIES*/
 
